@@ -2,17 +2,19 @@ b8a49791ec3e1e7b9d077854dd782942a8215fb17904bfb13093ed077492b49d *Compiled\Other
 cdb10fa83d7980d2d27e7fb36682659ed481368ae7d923a3b6578765f93d922f *Compiled\Windows\fftp.cfg
 3445a33d0d62250b34b44b0764b55c4b3b3a3a1c14e5570c29a6a1f93a8353a7 *Compiled\Windows\fftp32.exe
 a1aed722776497288304cbc1f51fe3c4f7e3287dc85ecf6185acf88a903fbf8c *Compiled\Windows\fftp64.exe
-8c53e41199221e5ef271303db9fa79510cbdcbcbcc207b0157d95b2e654a7adc *Source\Other\cfgparse.c
+89aaa11ef9b717765c454e202a150010cc8a30dd8be18f7499068017c022db6c *Source\Other\cfgparse.c
 427b7db493e4684ef233f5067170e3d2bfcdf9bef040c5492178cfd1bd1cdc0b *Source\Other\cfgparse.h
-a8d515a33fc02c8a25f570e966f9a295099d1b670174341520c3bd277f256b4c *Source\Other\changelog.txt
+dcce504f3d12ebf692834f672cecfa8fc28bf5902387ea7d19558a001e8ebaf9 *Source\Other\changelog.txt
 b8a49791ec3e1e7b9d077854dd782942a8215fb17904bfb13093ed077492b49d *Source\Other\fftp.conf
-4cb9eaff8038a22a7f80fa0afa821a80904182de0b2caf98b37e110597ba027a *Source\Other\ftpserv.c
+58de3a26bbf00eba739780efbc4e8c7743c169882436106f816010759ec6fd79 *Source\Other\ftpserv.c
 7402b915128d13f1bad74b1e7ce52d5cc6892368f0cc0c5b23c91169d080da02 *Source\Other\ftpserv.h
-e748ef17e664b9b5e7f18d8c4d4f8e9baaf5e5c5c1a15050ba06382e339547a0 *Source\Other\main.c
-e36a2cbee884ea37ee3078eed42f5456874bd61ac5f6f0ea92fbb2592a1e54fd *Source\Other\Release\makefile
+e8a711027a2e141134bf126cce28eb4dfeee06d55dc37ca68cf3660429405baa *Source\Other\main.c
+ebb995befa74b64aadd88038a62c05184b9d03981f34028924fe6d0d38bd0d89 *Source\Other\x_malloc.c
+79876657549a772e6e48fdacc83f18352ad9a23529cab840e169fdfe62d6a01e *Source\Other\x_malloc.h
+65c2c882ead0e9266325893b457b8506db2a081eb3936939dedfce52c22c31ea *Source\Other\Release\makefile
 e7567c8ea6e252acf06be3a1e0c1a2769bdbfa0e29c8fc5c920b047203db084a *Source\Other\Release\objects.mk
 45bf7584af2acb3c6c806bd48b0774c661e081efdaff00d735554cde1ed76fbb *Source\Other\Release\sources.mk
-4119e84853faeb48ffe14a57ac92352d87451cba3ea20927fea76976eca06d73 *Source\Other\Release\subdir.mk
+a481ceeafb98fce03ca27694e6b5d13e858806385f1dd29cd9cb0ef459f00abf *Source\Other\Release\subdir.mk
 71f29f165b2554ec548bc56a113f38c0c993c2b34265acfd6d4c64a05f3db1ef *Source\Windows\fftp.sln
 8708f082b6072e0ab2c55984c2bd252f80049f2d4dceabf6fd8cf4815331cf7f *Source\Windows\fftp\debug.conf
 6315323d32acdc93160ed785f82631e686645370ae62082199f5c8000fc98e08 *Source\Windows\fftp\fftp.vcxproj
